# hexagon_c

./: .gitignore  Calisan_scriptler.md  Makefile  hexarch-0.0.1(4).vsix
ZMQDEF/: generate_simple_models.sh
a_hexagon/a_hexagon/: Makefile  a_hexagon  compile_a.sh
b_hexagon/b_hexagon/: compile_b.sh
hexagon_bx/: CMakeLists.txt
hexagon_c/: hexagon_c_app
hexagon_c/hexagon_c/: CMakeLists.txt  Makefile  c_hexagon  compile_c.sh
hexagon_c/src/application/: main.cpp
hexagon_cx/: CMakeLists.txt
hexagon_cx/src/adapters/incoming/zeromq/: ZeroMQDishTrackDataSubscriber.cpp
hexagon_cx/src/adapters/outgoing/zeromq/: ZeroMQRadioTrackDataPublisher.cpp  ZeroMQRadioTrackDataPublisher.hpp  ZeroMQTrackDataPublisher.cpp  ZeroMQTrackDataPublisher.hpp
test/a_hexagon/: Doxyfile  Makefile  Proje_Yap_sorgu  README.md  build_docs.sh  makefile_white.mk  run.sh  test_publisher.py
test/a_hexagon/doc/: IncomingAdapter_Ekleme_Rehberi.md  IncomingAdapter_Ekleme_Rehberi_v2.md  a_hexagon.tag  mainpage.md
test/a_hexagon/lib/: libspdlog.so.1.12.0
test/a_hexagon/test/a_hexagon/: CMakeLists.txt  Makefile  README.md  main_test.cpp
test/a_hexagon/test/a_hexagon/adapters/common/: AdapterManagerTest.cpp
test/a_hexagon/test/a_hexagon/adapters/incoming/: TrackDataZeroMQIncomingAdapterTest.cpp
test/a_hexagon/test/a_hexagon/adapters/outgoing/: ExtrapTrackDataZeroMQOutgoingAdapterTest.cpp
test/a_hexagon/test/a_hexagon/domain/logic/: TrackDataExtrapolatorTest.cpp
test/a_hexagon/test/a_hexagon/domain/model/: ExtrapTrackDataTest.cpp  TrackDataTest.cpp
test/a_hexagon/test/a_hexagon/lib/: libgmock_main.so.1.15.2
test/a_hexagon/test/a_hexagon/mocks/: MockIncomingPort.hpp  MockMessageSocket.hpp  MockOutgoingPort.hpp
test/a_hexagon/test/a_hexagon/utils/: LoggerTest.cpp
test/b_hexagon/: Analysis.md  Doxyfile  Makefile  Makefile.test  README.md  makefile_white.mk  makefile_white_Opus.mk  prompt.txt  run.sh
test/b_hexagon/doc/: Coklu_OutgoingAdapter_Rehberi.md  Coklu_OutgoingAdapter_Rehberi_v2.md  Coklu_OutgoingAdapter_Rehberi_v3.md  b_hexagon.tag  mainpage.md  new_arch_v4.md  new_arch_v4_performance_analysis.md  new_arch_v6_workload_analysis.md  (+1 more)
test/c_hexagon/: Doxyfile  Makefile  Makefile.test  README.md  makefile_white.mk  run.sh
test/centos_packages/: README.md  download_packages.sh  install_dependencies.sh  install_offline.sh  pack_local_sources.sh
test/egitim/: cpp17_keywords_ve_yapilar.txt
test/test_hexagon/: Makefile  README.md  run.sh
zmq_tests/: calistirma_rehberi.bat  compile_apps.bat  setup_dlls.bat
(+1511 files in other folders)
